cc: Fix DCHECK failure for pending tree raster duration timer.

We currently assume that activation will always be preceded by being
notified that the tree is ready to be activated but that's not
necessarily true. Fix that.

BUG=736193
R=sunnyps@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2956563002
Cr-Commit-Position: refs/heads/master@{#481980}

Former-commit-id: 55116d34017a084746e6829576e5716d5586d084